mcm-demo-api-users/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mcm-demo-api-users
  labels:
    k8s-app: mcm-demo-api-users
spec:
  selector:
    k8s-app: mcm-demo-api-users
  type: ClusterIP
  ports:
  - name: web
    port: 80
    targetPort: 8080
    protocol: TCP
