mcm-demo-api-users/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mcm-demo-api-users
  annotations:
    kubernetes.io/ingress.className: nginx-ingress
spec:
  rules:
    - host: mcm-demo-api-users.local
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: mcm-demo-api-users
                port:
                  number: 80
